k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rms-demo
  namespace: rms
  labels:
    environment: development
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  ingressClassName: traefik
  rules:
    - host: rms.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rms-demo
                port:
                  number: 80
